# OpenCL-Evaluation-Graph

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  список действий по построению графа.txt
cmake/oxygen/: add_doc.cmake  doxygen.cmake  macro2.cmake
example/: CMakeLists.txt
example/Java/: CMakeLists.txt  MANIFEST.MF
example/Java/com/example/: Main.java
example/cplusplus/: CMakeLists.txt
example/cplusplus/src/: main.cpp
example/dotnet/: CMakeLists.txt  Program.cs
example/dotnet/Properties/: AssemblyInfo.cs
example/src/: main.cpp
header/: CLHelper.h  Data.h  Device.h  Node.h  dll_macros.h
src/: CLHelper.cpp  Data.cpp  DataImpl.cpp  DataImpl.h  Device.cpp  INode.h  Node.cpp  NodeAdd.cpp  NodeAdd.h  NodeData.cpp  NodeData.h  NodeImpl.cpp  NodeImpl.h  NodeMul.cpp  NodeMul.h
tests/: CMakeLists.txt  Data_test.cpp  Node_test.cpp
tests/src/: Data_test.cpp  NodeMulTest.cpp  Node_test.cpp
wrappers/C/: CMakeLists.txt
wrappers/C/header/: ClGraphDefs.h
wrappers/C/header/c_cl_graph/: ClGraphDefs.h
wrappers/C/src/: ClGraphDefs.cpp
wrappers/Java/: CMakeLists.txt
wrappers/Java/com/clgraph/: Data.java  Device.java  Node.java
wrappers/Java/src/: JData.cpp  JData.h  JDevice.cpp  JNode.cpp
wrappers/NET/Framework/: CMakeLists.txt
wrappers/NET/Framework/src/: ManagedData.cpp  ManagedData.h  ManagedDevice.cpp  ManagedDevice.h  ManagedNode.cpp  ManagedNode.h  Utilities.hpp
